Refactor recurring tasks to use lazy lookahead generator and structured recurrence fields